<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Name"
            android:inputType="textCapWords"/>

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/toppings"
            />

        <CheckBox android:id="@+id/whipped_cream_checkbox"
            style="@style/CheckBoxStyle"
            android:text="@string/whipped_cream"
            android:textSize="16sp"
            android:paddingLeft="16dp"/>

        <CheckBox android:id="@+id/chocolate_checkbox"
            style="@style/CheckBoxStyle"
            android:text="@string/chocolate"
            android:textSize="16sp"
            android:paddingLeft="16dp"/>

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/quantity"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <Button
                style="@style/ButtonStyle"
                android:id="@+id/dec"
                android:text="-"
                android:onClick="dec"/>

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2"
                android:textColor="@android:color/black"
                android:textAllCaps="true"
                android:layout_marginRight="16dp"
                />

            <Button
                style="@style/ButtonStyle"
                android:id="@+id/inc"
                android:onClick="inc"
                android:text="+" />

        </LinearLayout>

        <Button
            android:id="@+id/button_id"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/order"
            android:onClick="submitOrder"/>

</LinearLayout>
</ScrollView>